# zed

./: Cargo.toml
assets/keymaps/: default-windows.json
crates/cherrypick_agent/: Cargo.toml
crates/cherrypick_agent/src/: error.rs  keys.rs  lib.rs  mcp.rs
crates/cherrypick_agent/src/chat/: mod.rs  store.rs
crates/cherrypick_agent/src/context/: mod.rs
crates/cherrypick_agent/src/provider/: anthropic.rs  mod.rs  types.rs
crates/cherrypick_agent/src/skills/: mod.rs
crates/cherrypick_agent/src/tools/: git_tools.rs  mod.rs  safe_path.rs
crates/cherrypick_pr/: Cargo.toml
crates/cherrypick_pr/src/: diff_service.rs  error.rs  lib.rs  merge_service.rs  service.rs  store.rs  types.rs  watcher.rs
crates/cherrypick_ui/: Cargo.toml
crates/cherrypick_ui/src/: branch_list.rs  cherrypick_sidebar.rs  cherrypick_view.rs  commit_graph_embed.rs  create_pr_form.rs  diff_file_list.rs  lib.rs  pr_detail.rs  pr_list.rs  pr_state.rs  remote_toolbar.rs  staging_view.rs  stash_list.rs
crates/client/src/: telemetry.rs
crates/editor/src/: editor.rs  editor_tests.rs  items.rs  mouse_context_menu.rs  selection_controls.rs  split.rs
crates/extension/src/: extension_builder.rs
crates/file_finder/src/: file_finder.rs
crates/git_ui/src/: commit_diff_preview.rs  conflict_view.rs  git_ui.rs  project_diff.rs
crates/gpui/src/: profiler.rs
crates/project/src/: git_store.rs
crates/project_panel/src/: project_panel.rs  project_panel_tests.rs
crates/theme_settings/src/: theme_settings.rs
crates/workspace/src/: pane.rs  workspace.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
crates/zed/src/zed/: quick_action_bar.rs
