[package]
name = "cherrypick_pr"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
git2.workspace = true
rusqlite.workspace = true
tokio-rusqlite.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "macros", "time"] }
thiserror.workspace = true
chrono.workspace = true
lru.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
