[package]
name = "cherrypick_ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
name = "cherrypick_ui"
path = "src/lib.rs"

[dependencies]
gpui.workspace = true
workspace.workspace = true
git.workspace = true
git_ui.workspace = true
project.workspace = true
ui.workspace = true
settings.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
