[package]
name = "cherrypick_ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
name = "cherrypick_ui"
path = "src/lib.rs"

[dependencies]
gpui.workspace = true
workspace.workspace = true
git.workspace = true
git_ui.workspace = true
project.workspace = true
ui.workspace = true
settings.workspace = true
askpass.workspace = true
anyhow.workspace = true
cherrypick_pr.workspace = true
cherrypick_agent.workspace = true
git_graph.workspace = true
log.workspace = true
sha2.workspace = true
git2.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
